# mince-raft-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  get_assets.sh  log.txt  models.json  todo.txt
assets/: models.json.bak
network/: Cargo.toml
network/derive_packet/: Cargo.toml
network/derive_packet/src/: lib.rs
network/src/: lib.rs  packets.rs  types.rs
resources/: Cargo.toml
resources/src/: blocks.rs  entities.rs  generators.rs  lib.rs  main.rs
resources/src/generators/: blocks.rs  entities.rs
shaders/hitboxes/: f.glsl  v.glsl
shaders/test/: f.glsl  v.glsl
src/: app.rs  chat.rs  client.rs  entities.rs  gui.rs  main.rs  network.rs  player.rs  renderer.rs  resources.rs  server.rs  settings.rs  state.rs  timer.rs  world.rs
src/app/: gui.rs  logger.rs
src/app/client/: chat.rs  mod.rs  player.rs  server.rs  world.rs
src/app/client/entities/: components.rs  mod.rs
src/app/client/world/: chunks.rs
src/app/gui/: chat_window.rs  debug_window.rs  entities_window.rs  log_window.rs
src/client/: chat.rs  entities.rs  gui.rs  network.rs  player.rs  renderer.rs  server.rs  world.rs
src/client/entities/: components.rs
src/client/gui/: chat_window.rs  debug_window.rs  entities_window.rs
src/client/network/: packets.rs  types.rs
src/client/renderer/: camera.rs  shader.rs
src/client/world/: chunks.rs
src/entities/: components.rs
src/gui/: chat_window.rs  chat_windows.rs  entities_window.rs  fps_counter.rs  info_window.rs  info_windows.rs  main_menu.rs  options_window.rs  other_windows.rs  pause_menu.rs  pause_windows.rs
src/gui/info_windows/: entities_window.rs  players_window.rs  server_info_window.rs
src/gui/other_windows/: fps_counter.rs  options_window.rs
src/io/: keyboard.rs  mod.rs  mouse.rs
src/network/: packets.rs  types.rs
src/renderer/: camera.rs  shader.rs
src/resources/: block_models.rs
src/server/: remote_player.rs
src/world/: chunk_builder.rs  chunks.rs  models.rs
