[package]
name = "minecraft"
version = "0.1.0"
authors = ["Ethan Miegel <ethan.miegel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
glium = "0.29.1"
imgui = "0.7.0"
imgui-glium-renderer = "0.7.0"
imgui-winit-support = "0.7.1"
winit = "0.19.3"
cgmath = "0.18.0"

rand = "0.8.4"
chrono = "0.4.19"

serde_json = "1.0.68"   # JSON interp for the chat
miniz_oxide = "0.4.4"   # ZLib compression library
quartz_nbt = "0.2.4"    # NBT library

# Logging
log = "0.4.0"
env_logger = "0.9.0"


[dependencies.resources]
path = "./resources"
version = "0.1.0"