[package]
name = "minecraft"
version = "0.1.0"
authors = ["Ethan Miegel <ethan.miegel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
glium = "0.31"

egui = "0.17.0"
egui-winit = { version = "0.17.0", default-features = false }
egui_glium = { version = "0.17.0", default-features = false, features = ["clipboard", "epi", "links"]}

glium_app = { path = "glium-app" }

glam = "0.20.0"

rand = "0.8.4"
chrono = "0.4.19"

serde_json = "1.0.68"   # JSON interp for the chat
miniz_oxide = "0.5.0"   # ZLib compression library
quartz_nbt = "0.2.4"    # NBT library

Inflector = "*"

# Logging
log = "0.4.0"
env_logger = "0.9.0"

lazy_static = "*"

[dependencies.resources]
path = "./resources"
version = "0.1.0"

# [dependencies.cgmath]
# version = "0.18.0"
# features = ["swizzle"]