[package]
name = "minecraft"
version = "0.1.0"
authors = ["Ethan Miegel <ethan.miegel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
glium = "0.31"

egui = "0.17.0"
egui-winit = { version = "0.17.0", default-features = false }
egui_glium = { version = "0.17.0", default-features = false, features = ["clipboard", "epi", "links"]}
egui_extras = { version = "0.17.0", features = ["image"] }

glium_app = { path = "glium-app" }

glam = "0.20.0"

rand = "0.8.4"
chrono = "0.4.19"
threadpool = "1.8.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
base64 = "0.13.0"
image = { version = "0.24", features = ["jpeg", "png"] }

miniz_oxide = "0.5.0"   # ZLib compression library
quartz_nbt = "0.2.4"    # NBT library

Inflector = "*"

# Logging
log = "0.4.0"
env_logger = "0.9.0"
simple-error = "0.2.3"

lazy_static = "*"

mcproto-rs = { version = "0.2.0", features = ["v1_16_3"] }
