[package]
name = "resources"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "resources"
path = "src/lib.rs"

[[bin]]
name = "resources"
path = "src/main.rs"

[dependencies]
serde_json = "1.0.68"   # JSON interp for the chat
Inflector = "*"
phf = {version = "0.10.0", features = ["macros"]}